--- a/src/main/resources/static/registro.html
+++ b/src/main/resources/static/registro.html
@@ -104,28 +104,28 @@
                 <option value="AC">AC
                 <option value="AL">AL
                 <option value="AP">AP
-                <option value="AC">AM
-                <option value="AL">BA
-                <option value="AP">CE   
-                <option value="AC">DF
-                <option value="AL">ES
-                <option value="AP">GO     
-                <option value="AC">MA
-                <option value="AL">MG
-                <option value="AP">PA
-                <option value="AC">PB
-                <option value="AL">PR
-                <option value="AP">PE
-                <option value="AC">PI
-                <option value="AL">RJ
-                <option value="AP">RN
-                <option value="AC">RS
-                <option value="AL">RO
-                <option value="AP">RR   
-                <option value="AC">SC
-                <option value="AL">SP
-                <option value="AP">SE     
-                <option value="AC">TO
+                <option value="AM">AM
+                <option value="BA">BA
+                <option value="CE">CE   
+                <option value="DF">DF
+                <option value="ES">ES
+                <option value="GO">GO     
+                <option value="MA">MA
+                <option value="MG">MG
+                <option value="PA">PA
+                <option value="PB">PB
+                <option value="PR">PR
+                <option value="PE">PE
+                <option value="PI">PI
+                <option value="RJ">RJ
+                <option value="RN">RN
+                <option value="RS">RS
+                <option value="RO">RO
+                <option value="RR">RR   
+                <option value="SC">SC
+                <option value="SP">SP
+                <option value="SE">SE     
+                <option value="TO">TO
             </select>
                 <span ng-show="(form.estado.$dirty || form.estado.$touched) && form.estado.$error.required" class="help-block">O estado é obrigatório</span>
             </div>
