--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -1,10 +1,26 @@
-<h1>Ola {{vm.user}}!</h1>
-<p>Voce esta logado!!</p>
-<h3>Todos os usuarios registrados:</h3>
-<ul>
-    <li ng-repeat="user in vm.allUsers">
-        {{user.username}} {{user.email}} {{user.password}} {{user.senhaconf}} {{user.nome}} {{user.sexo}} {{user.cpf}} {{user.data}}{{user.telefone}}  ({{user.end}}) {{user.numend}} {{user.cep}} {{user.cidade}} {{user.estado}}
-    </li>
-</ul>
-<button class="btn btn-primary" ng-click="vm.logout()">Logout</a></button>
-<p>&nbsp;</p>
+<div class="container"></div>
+    <h1>Ola {{vm.user}}!</h1>
+    <p>Voce esta logado!!</p>
+    <h3>Todos os usuarios registrados:</h3>
+    <ul>
+        <li ng-repeat="user in vm.allUsers">
+            {{user.username}} {{user.email}} {{user.password}} {{user.senhaconf}} {{user.nome}} {{user.sexo}} {{user.cpf}} DATA ***{{user.data}}*** {{user.telefone}}  ({{user.end}}) {{user.numend}} {{user.cep}} {{user.cidade}} {{user.estado}}
+        </li>
+    </ul>
+    <p>&nbsp;</p>
+    <div class="row">
+        <div class="col-sm-6 col-md-6">
+            <button class="btn btn-primary">Cadastro de Medicos</button>
+            <button class="btn btn-primary">Cadastro de Especialidades</button>
+            <button class="btn btn-primary">Cadastro de Exames</button>
+        </div>
+    </div>
+    <p>&nbsp;</p>
+    <div class="row">
+        <div class="col-sm-6 col-md-6">
+            <a href="#!/" class="btn btn-primary">Inicio</a>
+            <a class="btn btn-default" ng-click="vm.logout()">Logout</a></button>
+        </div>
+    </div>
+    <p>&nbsp;</p>
+</div>
