--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -1,5 +1,5 @@
 <div class="container" id="login-page">
-	<div class="col-sm-5 col-md-offset-3">
+	<div class="col-sm-5 col-md-offset-3 col-sm-offset-3 col-md-5">
 		<div class="page-header">
 			<img src="https://cdn3.iconfinder.com/data/icons/wpzoom-developer-icon-set/500/100-512.png" />
 		</div>
@@ -24,7 +24,7 @@
 			</div>
 		</form>
 		<div ng-show="authenticated">
-			<a href="#!/admin" class="btn btn-link">Admin</a>
+			<a href="#!/admin" class="btn btn-primary">Admin</a>
 			<a href="#!/registro" class="btn btn-link">Registro</a>
 			<a href="#!/busca" class="btn btn-link">Clinicas</a>
 			<button class="btn btn-default" ng-click="vm.logout()">Logout</button>
