--- a/src/main/resources/static/registro.html
+++ b/src/main/resources/static/registro.html
@@ -1,11 +1,9 @@
 <title>Tela de Cadastros</title>
 <h1>Selecione o tipo de cadastro</h1>
-<div class="col-md-12 col-sm-12">
-    <a href="#!/registro/admin" style="font-size: 150%" class="btn btn-link">Cadastro de Administrador</a>
-</div>
-<div class="col-md-12 col-sm-12">
-    <a class="btn btn-link" style="font-size: 150%">Cadastro de Medico</a>
-</div>
-<div class="col-md-12 col-sm-12">
-    <a class="btn btn-link" style="font-size: 150%">Cadastro de Paciente</a>
-</div>
+
+<ul class="nav nav-pills nav-stacked">
+        <li role="registro"><a href="#!/registro/admin">Cadastro de Administrador</a></li>
+        <li role="registro"><a >Cadastro de Medico</a></li>
+        <li role="registro"><a >Cadastro de Paciente</a></li>
+        <li role="registro"><a href="#!">Voltar</a></li>
+</ul>
